# IBM-Project-18852-1659690758

./: README.md
Assignments/Team Member 3 Sreemathi/Assignment4/: README.md
Deployment of App in IBM CLoud/ibm-container-registry-master/Access-image-in-app/yaml/: 02-secrets.yaml
Final Deliverables/: .gitignore  Dockerfile  deployment.yaml  entrypoint.sh  pyproject.toml  service.yaml
Final Deliverables/news-tracker/: auth.py  config.py  news.py
Final Deliverables/news-tracker/templates/: base.html
Implementing Web Application/: Create IBM DB2 And Connect With Python.docx  Integrate rapid API.docx
Project Development Phase/Sprint 1/: mail.html
Project Development Phase/Sprint 1/templates/: base.html  login.html  register.html
Project Development Phase/Sprint 2/: .gitignore  app.py
Project Development Phase/Sprint 2/templates/: login.html  register.html
Project Development Phase/Sprint 3/: pyproject.toml
Project Development Phase/Sprint 4/: sample.json
Project Development Phase/Sprint 4/static/assets/img/css/: style.css
Project Development Phase/Sprint 4/templates/: login.html
