[tool.poetry]
name = "news-tracker"
version = "0.1.0"
description = ""
authors = ["Harshaa Vardaan <harshaaloga@gmail.com>"]
readme = "README.md"
packages = [{include = "news_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.44"
Flask-Login = "^0.6.2"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
ibm-db = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
