[tool.poetry]
name = "news-tracker"
version = "0.1.0"
description = ""
authors = ["Harshaa Vardaan <harshaaloga@gmail.com>"]
readme = "README.md"
packages = [{include = "news_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pandas = "^1.5.2"
python-dotenv = "^0.21.0"
ibm-db = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
